--- a/style/style.css
+++ b/style/style.css
@@ -2,11 +2,16 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   padding: 0;
-  border: 0;
+  margin: 0;
 }
 
 html,
 body {
   font-family: 'Oswald', sans-serif;
+}
+
+.card {
+  -webkit-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.623);
+          box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.623);
 }
 /*# sourceMappingURL=style.css.map */
